[package]
name = "oxideav-aiff"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
authors = ["Mark Karpeles"]
description = "Pure-Rust, clean-room AIFF / AIFF-C (AIFC) container — FORM/COMM/SSND chunk walker, 80-bit IEEE extended sample-rate decode, and PCM compressionType readers (NONE/twos/sowt/raw/fl32/fl64)"
repository = "https://github.com/OxideAV/oxideav-aiff"
homepage = "https://github.com/OxideAV/oxideav-aiff"
readme = "README.md"
keywords = ["aiff", "aifc", "audio", "container", "multimedia"]
categories = ["multimedia::encoding", "multimedia::audio"]

[features]
default = ["registry"]

# `registry` wires the AIFF demuxer factory into `oxideav-core`'s
# `ContainerRegistry`. Disable it (`default-features = false`) for a
# free-standing build that exposes the chunk parser, PCM sample readers,
# and 80-bit extended-float decoder without dragging in the framework
# dependency tree.
registry = ["dep:oxideav-core"]

[dependencies]
# Optional under the `registry` feature so the chunk parser + PCM
# readers are usable without the framework's trait surface.
oxideav-core = { version = "0.1", optional = true }
